// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Basic Details component  should render correctly for Boss order 1`] = `
<div
  className=""
>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="elem-mb-SM"
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orderDetails_orderNumber
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      70000311411
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="elem-mb-SM"
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orderDetails_orderDate
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      October 11, 2019
      <Styled(BodyCopy)
        className="elem-mr-XXS elem-ml-XXS"
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_orderDetails_at
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        02:21am
      </Styled(BodyCopy)>
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</div>
`;

exports[`Order Basic Details component  should render correctly for ECOM order 1`] = `
<div
  className=""
>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="elem-mb-SM"
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orderDetails_orderNumber
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      70000311411
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="elem-mb-SM"
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orderDetails_orderDate
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      September 30, 2019
      <Styled(BodyCopy)
        className="elem-mr-XXS elem-ml-XXS"
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_orderDetails_at
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        02:21am
      </Styled(BodyCopy)>
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</div>
`;
